--- a/Kwamby_Studio.html
+++ b/Kwamby_Studio.html
@@ -113,7 +113,7 @@
         <a href="contact.html" class="footer-link">Contact Us</a>
     </div>
     <div>
-        <p>&copy; 2024 BMG Vacations. All rights reserved.</p>
+        <p>&copy; 2024 BMG VACATIONS. All rights reserved.</p>
     </div>
 </footer>
 
