--- a/about.html
+++ b/about.html
@@ -49,10 +49,10 @@
             <!-- About Summary -->
             <div class="about-summary">
                 <h4>About BMG Vacations</h4>
-                <p1>BMG Vacations is your trusted partner for exceptional holiday accommodations across Kenya. From luxurious villas to cozy
+                <p1>BMG vacations is your trusted partner for exceptional holiday accommodations across Kenya. From luxurious villas to cozy
                 apartments, we cater to every traveler's needs, ensuring comfort, convenience, and affordability. With a focus on
                 personalized service, prime locations, and curated amenities, we create memorable stays for families, groups, and
-                individuals. Whether you're planning a short getaway or an extended vacation, BMG Vacations is here to make your
+                individuals. Whether you're planning a short getaway or an extended vacation, BMG vacations is here to make your
                 experience seamless and unforgettable.
                 
                 Discover your perfect escape with us—where every stay feels like home.</p1>
@@ -112,7 +112,7 @@
         <a href="contact.html" class="footer-link">Contact Us</a>
     </div>
     <div>
-        <p>&copy; 2024 BMG Vacations. All rights reserved.</p>
+        <p>&copy; 2024 BMG VACATIONS. All rights reserved.</p>
     </div>
 </footer>
 
