--- a/Apartment_in_Nyali_Citymall.html
+++ b/Apartment_in_Nyali_Citymall.html
@@ -133,7 +133,7 @@
         <a href="contact.html" class="footer-link">Contact Us</a>
     </div>
     <div>
-        <p>&copy; 2024 BMG Vacations. All rights reserved.</p>
+        <p>&copy; 2024 BMG VACATIONS. All rights reserved.</p>
     </div>
 </footer>
 
