--- a/Bamburi_Beach_Homes.html
+++ b/Bamburi_Beach_Homes.html
@@ -123,7 +123,7 @@
         <a href="contact.html" class="footer-link">Contact Us</a>
     </div>
     <div>
-        <p>&copy; 2024 BMG Vacations. All rights reserved.</p>
+        <p>&copy; 2024 BMG VACATIONS. All rights reserved.</p>
     </div>
 </footer>
 
