--- a/contact.html
+++ b/contact.html
@@ -56,7 +56,6 @@
                 <form id="contactForm">
                     <!-- Input Fields -->
                     <input type="text" id="name" name="name" placeholder="Your Name" required>
-                    <input type="email" id="email" name="email" placeholder="Your Email" required>
                     <textarea id="message" name="message" placeholder="Your Message" rows="5" required></textarea>
     
                     <!-- Submit Button -->
@@ -110,7 +109,6 @@
         </div>
     </section>
 
-
 </body>
 
 <!-- Footer Section -->
@@ -121,7 +119,7 @@
         <a href="contact.html" class="footer-link">Contact Us</a>
     </div>
     <div>
-        <p>&copy; 2024 BMG Vacations. All rights reserved.</p>
+        <p>&copy; 2024 BMG VACATIONS. All rights reserved.</p>
     </div>
 </footer>
 
