--- a/Kwamby_Studio.html
+++ b/Kwamby_Studio.html
@@ -86,6 +86,9 @@
                     <div class="small-image">
                         <img src="images/KS 6.jpg" alt="Small Image 4">
                     </div>
+                    <div class="small-image">
+                        <img src="images/KS 7.jpg" alt="Small Image 4">
+                    </div>
                 </div>
             </div>
 
