--- a/properties.html
+++ b/properties.html
@@ -18,6 +18,7 @@
         <nav class="top-nav">
             <a href="home.html" class="nav-item">Home</a>
             <a href="properties.html" class="nav-item">Our Properties</a>
+            <a href="adventures.html" class="nav-item">Adventures</a>
             <a href="about.html" class="nav-item">About Us</a>
             <a href="reviews.html" class="nav-item">Reviews</a>
             <a href="contact.html" class="nav-item">Contact Us</a>
@@ -30,6 +31,7 @@
             <div class="dropdown-content">
                 <a href="home.html" class="nav-item">Home</a>
                 <a href="properties.html" class="nav-item">Our Properties</a>
+                <a href="adventures.html" class="nav-item">Adventures</a>
                 <a href="about.html" class="nav-item">About Us</a>
                 <a href="reviews.html" class="nav-item">Reviews</a>
                 <a href="contact.html" class="nav-item">Contact Us</a>
@@ -143,7 +145,7 @@
 
     <section id="contact">
         <p>Have questions? Click below to inquire on WhatsApp.</p>
-        <a href="https://wa.me/1234567890?text=Hi%20BMG%20Vacations,%20I%20have%20a%20question%20about%20your%20properties."
+        <a href="https://wa.me/+254757284826?text=Hi%20BMG%20Vacations,%20I%20have%20a%20question%20about%20your%20properties."
             target="_blank" class="whatsapp-button">
             Message on WhatsApp
         </a>
