--- a/Bamburi_Beach_Homes.html
+++ b/Bamburi_Beach_Homes.html
@@ -4,12 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BMG Vacations</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Our Properties - BMG Vacations</title>
+    <link rel="stylesheet" href="style.css"> <!-- Link to the same CSS -->
 </head>
 
 <body>
-    <!-- Header Section -->
     <header class="navbar">
         <div class="logo-container">
             <img src="images/logo.png" alt="BMG Vacations Logo" class="logo">
@@ -19,6 +18,7 @@
         <nav class="top-nav">
             <a href="home.html" class="nav-item">Home</a>
             <a href="properties.html" class="nav-item">Our Properties</a>
+            <a href="adventures.html" class="nav-item">Adventures</a>
             <a href="about.html" class="nav-item">About Us</a>
             <a href="reviews.html" class="nav-item">Reviews</a>
             <a href="contact.html" class="nav-item">Contact Us</a>
@@ -31,6 +31,7 @@
             <div class="dropdown-content">
                 <a href="home.html" class="nav-item">Home</a>
                 <a href="properties.html" class="nav-item">Our Properties</a>
+                <a href="adventures.html" class="nav-item">Adventures</a>
                 <a href="about.html" class="nav-item">About Us</a>
                 <a href="reviews.html" class="nav-item">Reviews</a>
                 <a href="contact.html" class="nav-item">Contact Us</a>
