--- a/reviews.html
+++ b/reviews.html
@@ -2,7 +2,6 @@
 <html lang="en">
 
 <head>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Our Properties - BMG Vacations</title>
@@ -19,6 +18,7 @@
         <nav class="top-nav">
             <a href="home.html" class="nav-item">Home</a>
             <a href="properties.html" class="nav-item">Our Properties</a>
+            <a href="adventures.html" class="nav-item">Adventures</a>
             <a href="about.html" class="nav-item">About Us</a>
             <a href="reviews.html" class="nav-item">Reviews</a>
             <a href="contact.html" class="nav-item">Contact Us</a>
@@ -31,6 +31,7 @@
             <div class="dropdown-content">
                 <a href="home.html" class="nav-item">Home</a>
                 <a href="properties.html" class="nav-item">Our Properties</a>
+                <a href="adventures.html" class="nav-item">Adventures</a>
                 <a href="about.html" class="nav-item">About Us</a>
                 <a href="reviews.html" class="nav-item">Reviews</a>
                 <a href="contact.html" class="nav-item">Contact Us</a>
