--- a/kisite_mpunguti.html
+++ b/kisite_mpunguti.html
@@ -119,6 +119,9 @@
                 <div class="grid-item">
                     <img src="images/gallery2.jpg" alt="Scenic Marine View">
                 </div>
+                <div class="grid-item">
+                    <img src="images/kisite1.jpg" alt="Scenic Marine View">
+                </div>
             </div>
         </div>
         <div class="whatsapp-button-container">
