--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <nav class="top-nav">
             <a href="home.html" class="nav-item">Home</a>
             <a href="properties.html" class="nav-item">Our Properties</a>
+            <a href="adventures.html" class="nav-item">Adventures</a>
             <a href="about.html" class="nav-item">About Us</a>
             <a href="reviews.html" class="nav-item">Reviews</a>
             <a href="contact.html" class="nav-item">Contact Us</a>
@@ -30,6 +31,7 @@
             <div class="dropdown-content">
                 <a href="home.html" class="nav-item">Home</a>
                 <a href="properties.html" class="nav-item">Our Properties</a>
+                <a href="adventures.html" class="nav-item">Adventures</a>
                 <a href="about.html" class="nav-item">About Us</a>
                 <a href="reviews.html" class="nav-item">Reviews</a>
                 <a href="contact.html" class="nav-item">Contact Us</a>
