--- a/adventures.html
+++ b/adventures.html
@@ -70,7 +70,7 @@
                 </div>
                 <!-- Dolphin Swimming -->
                 <div class="experience-card">
-                    <img src="IMAGES/Yatch B1.jpg" alt="Yatch cruise" class="experience-image">
+                    <img src="images/Yatch B1.jpg" alt="Yatch cruise" class="experience-image">
                     <div class="experience-info">
                         <h3 class="experience-title">Discover Serenity: Yacht Cruise at Mtwapa Creek</h3>
 
