--- a/yatch_cruise.html
+++ b/yatch_cruise.html
@@ -89,7 +89,7 @@
             <h3>Check out the Yacht</h3>
             <div class="gallery">
                 <div class="gallery-item gallery-item-2">
-                    <img src="images/Yatch B2.jpg" alt="Onboard Dining">
+                    <img src="images/Yatch B2.jpg" alt="Luxury Yacht Exterior">
                 </div>
                 <div class="gallery-item gallery-item-3">
                     <img src="images/Yatch B4.jpg" alt="Cruising on Mtwapa Creek">
