--- a/yatch_cruise.html
+++ b/yatch_cruise.html
@@ -91,8 +91,8 @@
                 <div class="gallery-item gallery-item-3">
                     <img src="images/Yatch B4.jpg" alt="Cruising on Mtwapa Creek">
                 </div>
-                <div class="gallery-item gallery-item-2">
-                    <img src="images/Yatch B8.jpg" alt="Luxury Yacht Exterior">
+                <div class="gallery-item gallery-item-3">
+                    <img src="images/yatch B8.jpg" alt="Luxury Yacht Exterior">
                 </div>
                 <div class="gallery-item gallery-item-4">
                     <img src="images/Yatch B5.jpg" alt="Luxury Yacht Exterior">
