--- a/properties.html
+++ b/properties.html
@@ -110,14 +110,14 @@
                 <h3><a href=Casey_Apartment2.html>Casey Apartment, Bamburi Mtambo</a></h3>
             </div>
         </div>
-        <!-- Property 6 -->
+        <!-- Property 9 -->
         <div class="Property">
             <div class="pcard">
-                <a href="Bamburi_Beach_Homes.html">
-                    <img src="images/BBH main.jpg" alt="Property 3"></a>
+                <a href="Leshan_Luxury_Villas.html">
+                    <img src="images/LLV main.jpg" alt="Leshan Luxury Villas"></a>
             </div>
             <div class="pcard-content">
-                <h3><a href=Bamburi_Beach_Homes.html>Bamburi Beach Homes,Butterfly Pavillion</a></h3>
+                <h3><a href="Leshan_Luxury_Villas.html">Leshan Luxury Villas, Diani</a></h3>
             </div>
         </div>
         <!-- Property 7 -->
@@ -140,6 +140,48 @@
                 <h3><a href=Kwamby_Studio.html>Kwamby Studio,Nyali</a></h3>
             </div>
         </div>
+        <!-- Property 10 -->
+        <div class="Property">
+            <div class="pcard">
+                <a href="eden_beachfront_apartments.html">
+                    <img src="images/EBA main.jpg" alt="Property 3"></a>
+            </div>
+            <div class="pcard-content">
+                <h3><a href=eden_beachfront_apartments.html>Eden Beachfront Apartments, Shanzu</a></h3>
+            </div>
+        </div>
+        <!-- Property 11 -->
+        <div class="Property">
+            <div class="pcard">
+                <a href="start_up_apartments.html">
+                    <img src="images/SU main.jpg" alt="Property 3"></a>
+            </div>
+            <div class="pcard-content">
+                <h3><a href=start_up_apartments.html>Start Up Apartment, Nyali</a></h3>
+            </div>
+        </div>
+        <!-- Property 12 -->
+        <div class="Property">
+            <div class="pcard">
+                <a href="pavillion_suites.html">
+                    <img src="images/PS main.jpg" alt="Property 3"></a>
+            </div>
+            <div class="pcard-content">
+                <h3><a href=pavillion_suites.html>Pavillion Suites,Nyali</a></h3>
+            </div>
+        </div>
+        <!-- Property 6 -->
+        <div class="Property">
+            <div class="pcard">
+                <a href="Bamburi_Beach_Homes.html">
+                    <img src="images/BBH main.jpg" alt="Property 3"></a>
+            </div>
+            <div class="pcard-content">
+                <h3><a href=Bamburi_Beach_Homes.html>Bamburi Beach Homes,Butterfly Pavillion</a></h3>
+            </div>
+        </div>
+
+
     </div>
     </section>
 
