--- a/Leshan_Luxury_Villas.html
+++ b/Leshan_Luxury_Villas.html
@@ -40,18 +40,16 @@
     </header>
 
     <main>
-        <section id="leshan-villas" class="video-header">
-            <video autoplay loop muted playsinline>
-                <source src="IMAges/Final video.mp4" type="video/mp4">
-                Your browser does not support the video tag.
-            </video>
-            <h2>Leshan Luxury Villas,<br>Diani</h2>
+        <section class="listing9">
+            <div class="listing-content">
+                <h2>Leshan Luxury Villas<br> in Diani</h2>
+            </div>
         </section>
 
         <section class="Property detail">
         <div class="apartment-gallery">
             <div class="main-image">
-                <img src="images/LLV main.jpg" alt="Leshan Villas Main Image">
+                <img src="images/LLV 10.jpg" alt="Leshan Villas Main Image">
             </div>
             <div class="apartment-info">
                 <h2>Features:</h2>
@@ -93,7 +91,10 @@
                     <img src="images/LLV 5.jpg" alt="Small Image 3">
                 </div>
                 <div class="small-image">
-                    <img src="images/LLV 10.jpg" alt="Small Image 3">
+                    <img src="images/LLV 11.jpg" alt="Small Image 3">
+                </div>
+                <div class="small-image">
+                    <img src="images/LLV 12.jpg" alt="Small Image 3">
                 </div>
                 <div class="small-image">
                     <img src="images/LLV 4.jpg" alt="Small Image 3">
