--- a/kisite_mpunguti.html
+++ b/kisite_mpunguti.html
@@ -83,6 +83,34 @@
             </div>
         </div>
     </section>
+    <!-- Rates and Package Includes Section -->
+    <!-- Rates and Package Includes Section -->
+    <section class="rates-section">
+        <div class="container">
+            <div class="rates-container">
+                <h2 class="section-title">Rates</h2>
+                <div class="rates-card">
+                    <p><strong>Kenyan Adults:</strong> <span>Ksh. 5,000</span></p>
+                    <p><strong>Kids (3-12 yrs):</strong> <span>Ksh. 3,500</span></p>
+                    <p><strong>Non-Resident Adults:</strong> <span>Ksh. 9,500</span></p>
+                </div>
+            </div>
+    
+            <div class="package-container">
+                <h2 class="section-title">Package Includes</h2>
+                <ul class="package-list">
+                    <li><span class="checkmark">✔</span> Round-trip transport from Diani</li>
+                    <li><span class="checkmark">✔</span> KWS Marine Park fees</li>
+                    <li><span class="checkmark">✔</span> Boat ride adventure</li>
+                    <li><span class="checkmark">✔</span> Snorkeling experience</li>
+                    <li><span class="checkmark">✔</span> Dolphin watching</li>
+                    <li><span class="checkmark">✔</span> Delicious seafood lunch</li>
+                </ul>
+            </div>
+        </div>
+    </section>
+
+
     
     <!-- Our Gallery Section -->
     <section class="gallery-section">
